# hs-i

./: LICENSE  README.md  Setup.hs  cabal.project  default.nix  flake.nix  geninstances.sh  genmodules.sh  i.cabal  test.hs
hs/: I.hs
hs/I/: Int8.hs  Integer.hs  Internal.hs  Natural.hs  Rational.hs  Word16.hs  Word32.hs  Word64.hs  Word8.hs
test/: Main.hs
test/I/Test/: Int8.hs  Integer.hs  Main.hs  Natural.hs  Rational.hs  Support.hs  Word8.hs
